methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (!estFaceMur()){
    avance()
    if (getCouleurSol() == Color.green) {
      recule()
    }
  } else {
    return false
  }
}